# SimpleChat

./: .travis.yml  App.h  CMakeLists.txt  ChatServer.cpp  ChatThread.cpp  ChatThread.h  User.cpp  readme.md
SimpleChat_Client/SimpleChat_Client_GUI/: AppDelegate.h  AppDelegate.m  ChatRoomWindowController.h  ChatRoomWindowController.m  ConViewController.xib  Info.plist  LoginWindowController.m  LoginWindowController.xib  MainViewController.m  RoomListWindow.xib
SimpleChat_Client/SimpleChat_Client_GUI.xcodeproj/: project.pbxproj
SimpleChat_Client/SimpleChat_Client_GUI.xcodeproj/project.xcworkspace/xcuserdata/neonkid.xcuserdatad/: UserInterfaceState.xcuserstate
SimpleChat_Client/SimpleChat_Client_GUI.xcodeproj/xcuserdata/neonkid.xcuserdatad/xcschemes/: xcschememanagement.plist
SimpleChat_Client/SimpleChat_Client_GUIUITests/: SimpleChat_Client_GUIUITests.m
SimpleChat_Client_GUI/: ChatRoomWindow.xib  ConViewController.h  ConViewController.m  LoginWindowController.h  Main.storyboard  MainViewController.h  MainWindowController.h  MainWindowController.m  RoomListWindowController.h  RoomListWindowController.m  main.m
SimpleChat_Client_GUI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SimpleChat_Client_GUI.xcodeproj/xcuserdata/neonkid.xcuserdatad/xcschemes/: SimpleChat_Client_GUI.xcscheme
SimpleChat_Client_GUITests/: SimpleChat_Client_GUITests.m
SimpleChat_Server/: App.cpp  Auth.cpp  Auth.h  AuthException.h  CMakeLists.txt  ChatException.h  ChatServer.h  User.h  main.cpp  readme.md
